# test-boilerplate

./: .buildinfo  .gitignore  LICENSE  Makefile  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: index.doctree
.doctrees/api/_autosummary/: my_package.doctree  my_package.my_module.doctree
.doctrees/examples/: index.doctree  my_example.doctree
.doctrees/nbsphinx/examples/: my_example.ipynb
.github/workflows/: tests.yml
_modules/: index.html
_modules/my_package/: my_module.html
_sources/api/: index.rst.txt
_sources/api/_autosummary/: my_package.my_module.rst.txt  my_package.rst.txt
api/: index.html
api/_autosummary/: my_package.html  my_package.my_module.html
docs/source/: conf.py  index.rst
docs/source/examples/: index.rst  my_example.nblink
examples/: index.html  my_example.html
examples/data/: my_data.json
my_package/: __init__.py  my_module.py
tests/: test_1.py
